  the line
  (Tadeu Zagallo, report by Roberto Di Cosmo,
   review by Hongbo Zhang, David Allsopp, Gabriel Scherer, Xavier Leroy)

- MPR#5250, GPR#1435: on Cygwin, when ocamlrun searches the path
  for a bytecode executable file, skip directories and other
  non-regular files, like other Unix variants do.
  (Xavier Leroy)

Release branch for 4.06:
------------------------

(Changes that can break existing programs are marked with a "*")

### Language features:

- MPR#6271, MPR#7529, GPR#1249: Support "let open M in ..."
  in class expressions and class type expressions.
  (Alain Frisch, reviews by Thomas Refis and Jacques Garrigue)

- GPR#792: fix limitations of destructive substitutions, by
  allowing "S with type t := type-expr",
  "S with type M.t := type-expr", "S with module M.N := path"
  (Valentin Gatien-Baron, review by Jacques Garrigue and Leo White)

* GPR#1064, GPR#1392: extended indexing operators, add a new class of
  user-defined indexing operators, obtained by adding at least
  one operator character after the dot symbol to the standard indexing
  operators: e,g ".%()", ".?[]", ".@{}<-":
    let ( .%() ) = List.nth in [0; 1; 2].%(1)
  After this change, functions or methods with an explicit polymorphic type
  annotation and of which the first argument is optional now requires a space
  between the dot and the question mark,
  e.g. "<f:'a.?opt:int->unit>" must now be written "<f:'a. ?opt:int->unit>".
  (Florian Angeletti, review by Damien Doligez and Gabriel Radanne)

- GPR#1118: Support inherited field in object type expression
    type t = < m : int >
    type u = < n : int; t; k : int >
  (Runhang Li, review by Jeremy Yallop, Leo White, Jacques Garrigue,
   and Florian Angeletti)

* GPR#1232: Support Unicode character escape sequences in string
  literals via the \u{X+} syntax. These escapes are substituted by the
  UTF-8 encoding of the Unicode character.
  (Daniel Bünzli, review by Damien Doligez, Alain Frisch, Xavier
  Leroy and Leo White)
